--- a/index.html
+++ b/index.html
@@ -3,207 +3,159 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- this is for the keywords and description -->
-    <meta name="keywords" content="project flowers" />
-    <meta
-      name="description"
-      content="project flowers that is used to display flowers"
-    />
-
-    <!-- this for author -->
-    <meta name="author" content="saja hamed" />
     <title>project flowers</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- start header -->
-    <header>
-      <div class="container">
-        <nav>
-          <!-- this is done for the user to navigate to the beginning of the page -->
-          <a class="logo" href="#"> FLUER </a>
+    <nav class="main-nav">
+      <h1 class="logo">FLUER</h1>
 
-          <ul class="nav-list">
-            <li>
-              <a href="#services">COLLECTIIONS</a>
-            </li>
-            <li>
-              <a href="#">ABOUT</a>
-            </li>
-            <li>
-              <a href="#">CONTACT</a>
-            </li>
-            <li>
-              <a href="#">SHOP</a>
-            </li>
-          </ul>
-        </nav>
+      <ul class="nav-list">
+        <li>
+          <a href="#">COLLECTIIONS</a>
+        </li>
+        <li>
+          <a href="#">ABOUT</a>
+        </li>
+        <li>
+          <a href="#">CONTACT</a>
+        </li>
+        <li>
+          <a href="#">SHOP</a>
+        </li>
+      </ul>
+    </nav>
+    <main class="main-page">
+      <img src="image/img13.jpeg" alt="image main " />
+      <div class="text">
+        <h2>Custom Dried Flower Bouquets</h2>
+        <p>Free delivery on orders over $79</p>
+        <button class="button-shop">SHOP</button>
       </div>
-    </header>
-    <!-- end header -->
-
-    <main>
-      <section class="home" id="home">
-        <div class="container">
-          <div class="text">
-            <h1>Custom Dried Flower Bouquets</h1>
-            <p>Free delivery on orders over $79</p>
-            <button class="button-shop">SHOP</button>
-          </div>
-          <div class="main-social">
-            <div class="social-icons">
-              <a href="https://instagram.com">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-              <a href="">
-                <i class="fa-brands fa-twitter"></i>
-              </a>
-              <a href="">
-                <i class="fa-brands fa-facebook-f"></i>
-              </a>
-              <a href="">
-                <i class="fa-brands fa-chrome"></i>
-              </a>
-            </div>
-
-            <a class="social-text" href="#">
-              DRIED PAMPAS COLLECTION
-              <i class="fa-solid fa-arrow-right"></i>
-            </a>
-          </div>
+      <div class="main-social">
+        <div class="social-icons">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-chrome"></i>
         </div>
-      </section>
-
-      <section class="services" id="services">
-        <div class="container">
-          <div class="service-title">
-            <h3>this is what we do</h3>
-            <h2>our services</h2>
-          </div>
-          <div class="card-container">
-            <div class="card">
-              <div class="img-box">
-                <img src="image/img4.jpg" alt="image flower " />
-              </div>
-
-              <div class="content-box">
-                <h3>Custom Bouquets</h3>
-                <p>
-                  favourite Flowers for special day or the prefect decoration
-                  for your next business event.
-                </p>
-                <a href="#">READ MORE</a>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="img-box">
-                <img src="image/img4.jpg" alt="image flower " />
-              </div>
-
-              <div class="content-box">
-                <h3>Custom Bouquets</h3>
-                <p>
-                  favourite Flowers for special day or the prefect decoration
-                  for your next business event.
-                </p>
-                <a href="#">READ MORE</a>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="img-box">
-                <img src="image/img4.jpg" alt="image flower " />
-              </div>
-
-              <div class="content-box">
-                <h3>Custom Bouquets</h3>
-                <p>
-                  favourite Flowers for special day or the prefect decoration
-                  for your next business event.
-                </p>
-                <a href="#">READ MORE</a>
-              </div>
-            </div>
-          </div>
+        <div class="social-text">
+          <p>DRIED PAMPAS COLLECTION</p>
+          <i class="fa-solid fa-arrow-right"></i>
         </div>
-      </section>
-
-      <section class="section-3" id="services">
-        <div class="section-title">
-          <h6>REMEMBER YOUR LOVED ONES</h6>
-          <h3>Gift Ideas That Last Longer</h3>
-          <p>
-            Gift Ideas That Last Longer Who doesn't love flowers! Whether you're
-            giving or receiving flowers, the only downside is how short-lived
-            the happiness is with a fresh bouquet of cut bouquets. We are
-            passionate about creating bouquets that not only look beautiful, but
-            last longer. Our premium dried flower bouquets can last up to years.
-            Ask our staff for more information on your perfect bouquet
-          </p>
-          <button>LET’S DO</button>
-        </div>
-
-        <img src="image/img8.jpeg" alt="image flower " />
-      </section>
-
-      <section class="Popular-section">
-        <h6>DRIED FLOWER COLLECTION</h6>
-        <h3>See What’s Popular</h3>
-        <div class="Popular-grid">
-          <div class="item">
-            <img src="image/imge9.jpeg" alt="image flower " />
-            <div class="info">
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-square-minus"></i>
-              <span>SHARE</span>
-            </div>
-          </div>
-          <div class="item">
-            <img src="image/imge10.jpeg" alt="image flower " />
-            <div class="info">
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-square-minus"></i>
-              <span>SHARE</span>
-            </div>
-          </div>
-          <div class="item">
-            <img src="image/imge11.jpeg" alt="image flower " />
-            <div class="info">
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-square-minus"></i>
-              <span>SHARE</span>
-            </div>
-          </div>
-          <div class="item">
-            <img src="image/img12.jpeg" alt="image flower " />
-            <div class="info">
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-square-minus"></i>
-              <span>SHARE</span>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="talk-section">
-        <div class="talk-box">
-          <h3>Talk To Our Staff</h3>
-          <p>
-            Trouble choosing your bouquet? Talk to our friendly customer service
-            who can help you along your journey to finding your dream bouquet.
-            We are a long line of passionate florists and believe that everyone
-            has their right bouquet.
-          </p>
-          <button>LET’S TALK</button>
-        </div>
-      </section>
-      <hr />
+      </div>
     </main>
+    <section class="services">
+      <div class="service-title">
+        <h6>THIS IS WHAT WE DO</h6>
+        <h3>Our Services</h3>
+      </div>
+      <div class="card-container">
+        <div class="card">
+          <img src="image/img4.jpg" alt="image flower " />
+
+          <h3>Custom Bouquets</h3>
+          <p>
+            Do you have an acquired taste? fa-chrome your favourite flowers to
+            the rarest hidden secrets,we have what you need.
+          </p>
+          <a href="#">READ MORE</a>
+        </div>
+        <div class="card">
+          <img src="image/img5.jpg" alt="image flower " />
+
+          <h3>Occasion Flowers</h3>
+          <p>
+            favourite Flowers for special day or the prefect decoration for your
+            next business event.
+          </p>
+          <a href="#">READ MORE</a>
+        </div>
+        <div class="card">
+          <img src="image/img8.jpeg" alt="image flower " />
+          <h3>Premade Bouquets</h3>
+          <p>
+            Our florists are passionate ABOUTcreating the most beautiful
+            combinations of selected dried flowers.
+          </p>
+          <a href="#">READ MORE</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-3">
+      <div class="section-title">
+        <h6>REMEMBER YOUR LOVED ONES</h6>
+        <h3>Gift Ideas That Last Longer</h3>
+        <p>
+          Gift Ideas That Last Longer Who doesn't love flowers! Whether you're
+          giving or receiving flowers, the only downside is how short-lived the
+          happiness is with a fresh bouquet of cut bouquets. We are passionate
+          about creating bouquets that not only look beautiful, but last longer.
+          Our premium dried flower bouquets can last up to years. Ask our staff
+          for more information on your perfect bouquet
+        </p>
+        <button>LET’S DO</button>
+      </div>
+
+      <img src="image/img8.jpeg" alt="image flower " />
+    </section>
+
+    <section class="Popular-section">
+      <h6>DRIED FLOWER COLLECTION</h6>
+      <h3>See What’s Popular</h3>
+      <div class="Popular-grid">
+        <div class="item">
+          <img src="image/imge9.jpeg" alt="image flower " />
+          <div class="info">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-square-minus"></i>
+            <span>SHARE</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="image/imge10.jpeg" alt="image flower " />
+          <div class="info">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-square-minus"></i>
+            <span>SHARE</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="image/imge11.jpeg" alt="image flower " />
+          <div class="info">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-square-minus"></i>
+            <span>SHARE</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="image/img12.jpeg" alt="image flower " />
+          <div class="info">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-square-minus"></i>
+            <span>SHARE</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="talk-section">
+      <div class="talk-box">
+        <h3>Talk To Our Staff</h3>
+        <p>
+          Trouble choosing your bouquet? Talk to our friendly customer service
+          who can help you along your journey to finding your dream bouquet. We
+          are a long line of passionate florists and believe that everyone has
+          their right bouquet.
+        </p>
+        <button>LET’S TALK</button>
+      </div>
+    </section>
+    <hr />
     <footer class="footer">
       <div class="footer-top">
         <!-- Left -->
